[project]
name = "pactus"
version = "0.2.0"
description = "Framework to evaluate Trajectory Classification Algorithms"
readme = "README.md"
authors = [
    { name = "Jorge Morgado Vega", email = "jorge.morgadov@gmail.com" },
    { name = "Gustavo Viera-López", email = "gvieralopez@gmail.com" },
    { name = "Alfredo Reyes", email = "areyes@fisica.uh.cu" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["trajectory", "classification"]
dependencies = [
    "numpy >= 1.20.0",
    "yupi >= 0.11.2",
    "tensorflow >= 2.9.1",
    "scikit-learn >= 1.1.1",
    "GitPython >= 3.1.29"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "pylint", "bumpver", "isort", "pytest"]

[project.urls]
Homepage = "https://github.com/yupidevs/pactus"

[tool.isort]
profile = "black"
known_first_party = ["pactus"]

[tool.black]
target-version = ["py37"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 88

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"pactus/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

