[project]
name = "pactus"
version = "0.4.3"
description = "Framework to evaluate Trajectory Classification Algorithms"
readme = "README.md"
authors = [
    { name = "Jorge Morgado Vega", email = "jorge.morgadov@gmail.com" },
    { name = "Gustavo Viera-López", email = "gvieralopez@gmail.com" },
    { name = "Alfredo Reyes", email = "areyes@fisica.uh.cu" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "trajectory",
    "classification"
]
dependencies = [
    "numpy >= 1.23.5",
    "yupi >= 0.11.2",
    "tensorflow >= 2.12.0",
    "scikit-learn >= 1.1.1",
    "xgboost >= 1.7.4",
    "GitPython >= 3.1.29",
    "requests >= 2.32.3"
]
requires-python = ">=3.8"

[options]
packages = [
    { name = "pactus", include = true },
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "pylint",
    "bumpver",
    "isort",
    "pytest",
    "tensor-annotations-tensorflow-stubs"
]

[project.urls]
Homepage = "https://github.com/yupidevs/pactus"

[tool.isort]
profile = "black"
known_first_party = ["pactus"]

[tool.black]
target-version = ["py38"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 88

[tool.bumpver]
current_version = "0.4.3"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"pactus/__init__.py" = [
    '__version__ = "{version}"',
]
"docs/source/conf.py" = [
    'release = "{version}"',
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.8"
exclude = [
    "docs",
]

[[tool.mypy.overrides]]
module = [
    "yupi.*",
    "sklearn.*",
]
ignore_missing_imports = true